--- a/style.css
+++ b/style.css
@@ -139,6 +139,14 @@ p{
     top: 90px;
 }
 
+.image_medium{
+    display:none;
+   }
+
+.image_small{
+    display: none;
+}
+
 .principal_container {
     display: flex;
     flex-direction: column;
@@ -413,26 +421,8 @@ background: rgb(0, 170, 218);
     padding: 20px;
 }
 
-@media (max-width: 1600px) {
-    .fondo_principal{
-        width: 130%;
-    }
 
-}
-
-@media (max-width: 1200px) {
-    .fondo_principal{
-        width: 150%;
-    }
-
-}
-
-@media (max-width: 1050px) {
-    .fondo_principal{
-        width: 190%;
-    }
-
-}
+/* RESPONSIVE */
 
 
 @media (max-width: 840px) {
@@ -491,8 +481,21 @@ background: rgb(0, 170, 218);
     }
 
     .fondo_principal{
-        width: 260%;
+        display: none;
     }
+
+    .image_medium{
+        display: block;
+        position: absolute;
+        width: 100%;
+        z-index: -1;
+        top: 90px;
+    }
+
+    .fondo_small{
+        display: none;
+    }
+
 
     .principal_container{
         display: flex;
@@ -588,7 +591,43 @@ background: rgb(0, 170, 218);
 
 @media (max-width: 576px) {
     .fondo_principal{
-        width: 350%;
+        display: none;
     }
 
+    .home_section p {
+        text-align: center;
+        margin-left: 0px;
+        font-size: 1.3rem;
+    }
+
+    .image_medium{
+        display: none;
+    }
+
+    .image_small{
+        display: block;
+        position: absolute;
+        width: 100%;
+        z-index: -1;
+        top: 90px;
+    }
+
+    .descargar_section h1 {
+        font-size: 2.5em;
+    }
+
+    .footer_section .footer_container .logo_guiar_footer {
+        width: 50%;
+        position: relative;
+        top: 1vh;
+    }
+    
+    .circulo_arg{
+        margin-left: 120px;
+    }
+
+    .footer_terminos_condiciones a {
+    font-size: 0.8rem;
+    }
+    
 }
