--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ p{
     display: none;
 }
 
-.principal_container {
+.portada {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -503,7 +503,7 @@ background: rgb(0, 170, 218);
     }
 
 
-    .principal_container{
+    .portada{
         display: flex;
         flex-direction: column;
         align-items: center;
